# saya

./: .gitignore  ARCHITECTURE.md  Cargo.toml  config.json
crates/saya-anki/: Cargo.toml
crates/saya-anki/src/: client.rs  lib.rs  template.rs
crates/saya-app/: Cargo.toml
crates/saya-app/src/: controller.rs  events.rs  io.rs  main.rs  ocr_context.rs  profile.rs  state.rs  status.rs  ui.rs
crates/saya-app/src/events/: capture_window.rs  create_card.rs  text_input.rs  trigger_auto_ocr.rs  trigger_ocr.rs
crates/saya-app/src/tests/: mod.rs  ocr_blocking_tests.rs  sync_channel_tests.rs
crates/saya-config/: Cargo.toml
crates/saya-config/src/: anki.rs  dictionary.rs  lib.rs  network.rs  ocr.rs  translator.rs  ui.rs
crates/saya-core/: Cargo.toml
crates/saya-core/src/: dictionary.rs  language.rs  lib.rs  preprocess.rs  state.rs  types.rs
crates/saya-dictionary/: Cargo.toml
crates/saya-dictionary/src/: lib.rs  types.rs
crates/saya-dictionary/src/loaders/: jmdict.rs
crates/saya-io/: Cargo.toml
crates/saya-io/src/: clipboard.rs  lib.rs  ws.rs
crates/saya-ocr/: Cargo.toml
crates/saya-ocr/src/: capture.rs  com.rs  hotkey.rs  lib.rs  ocr.rs
crates/saya-translator/: Cargo.toml
crates/saya-translator/src/: lib.rs
crates/saya-types/: Cargo.toml
crates/saya-types/src/: types.rs
crates/saya-ui/: Cargo.toml
crates/saya-ui/src/: bridge.rs  events.rs  lib.rs  state.rs
crates/saya-ui/ui/: main.slint  ocr_window.slint  overlay.slint
crates/saya-ui/ui/components/: config.slint
languages/japanese/: Cargo.toml
languages/japanese/src/: deconjugator.rs  dictionary.rs  frequency.rs  jlpt.rs  lib.rs  loader.rs  pitch_accent.rs  processor.rs  translator.rs
