[package]
name = "saya-ocr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_ocr"
path = "src/bin/test_ocr.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
windows = { version = "0.62.2", features = [
    "Foundation",
    "Storage_Streams",
    "Graphics_Imaging",
    "Media_Ocr",
    "Globalization",
    "Win32_System_Com",
] }
xcap = "0.0.14"
global-hotkey = "0.6"
image = "0.25"
saya-types = { path = "../saya-types/" }
