[package]
name = "saya-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.14.1"
kanal.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
saya-core = { path = "../saya-core" }
saya-ocr = { path = "../saya-ocr" }

[build-dependencies]
slint-build = "1.14.1"
