[package]
name = "saya-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.14.1"
kanal.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
saya-types = { path = "../saya-types" }
saya-ocr = { path = "../saya-ocr" }
saya-config = { path = "../saya-config/" }

[build-dependencies]
slint-build = "1.14.1"
