[package]
name = "saya-lang-japanese"
version = "0.1.0"
edition = "2024"

[dependencies]
saya-core = { path = "../../crates/saya-core" }
saya-translator = { path = "../../crates/saya-translator" }
unicode-normalization = { version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
